# Django-ecommerce

./: .gitignore  Dockerfile  README.md  commands.txt  data.json  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
blog/: admin.py  context_processor.py  models.py  views.py
blog/migrations/: 0004_postcategory_delete_category_and_more.py  0005_remove_comment_id_alter_post_id.py
cart/: urls.py  views.py
category/: admin.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py
common/: models.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0005_vendor_cover_image_alter_product_vendor.py  0006_alter_category_image_alter_product_image_and_more.py  0007_alter_category_image_alter_product_image_and_more.py  0008_alter_vendor_image.py  0009_alter_vendor_image.py  0012_alter_vendor_image.py  0013_alter_vendor_image.py  0033_remove_address_user_remove_cartorder_user_and_more.py
ecomproject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
order/: admin.py  models.py  urls.py
order/migrations/: 0001_initial.py  0002_initial.py
product/: admin.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: account_verification_email.html  forgotPassword.html  resetPassword.html  reset_password_email.html
templates/blog/: blog-detail.html  blog.html  category.html  (+1 more)
userauths/: adapters.py  apps.py  emails_handler.py  forms.py  models.py  signals.py  urls.py  views.py
wishlist/: admin.py  models.py  urls.py  views.py
(+33 files in other folders)
